Banner Cross List Creation Bug Fix + Code Cleanup
Resolved issue with creation of cross listed Banner Sections when multiple nested classes of the same instructional type exist.

Code cleanup.