@@ -66,10 +66,9 @@ public class BannerSectionLinkageHelper {
 		schedulingSubpartIsLastSibling = new HashMap<SchedulingSubpart, Boolean>();
 	}
 
-	@SuppressWarnings("unchecked")
 	public void updateLinkages(){
 		Debug.info("Manage linking for an offering");
-		for (InstrOfferingConfig ioc : (Set<InstrOfferingConfig>) instructionalOffering.getInstrOfferingConfigs()){
+		for (InstrOfferingConfig ioc : instructionalOffering.getInstrOfferingConfigs()){
 			if (ioc.getSchedulingSubparts().isEmpty()){
 				continue;
 			} else if (ioc.getSchedulingSubparts().size() == 1){
@@ -83,7 +82,7 @@ public class BannerSectionLinkageHelper {
 	@SuppressWarnings("unchecked")
 	private void updateLinksForPartiallyNested(InstrOfferingConfig ioc) {
 		TreeSet<SchedulingSubpart> topLevel = new TreeSet<SchedulingSubpart>(new SchedulingSubpartComparator());
-		for (SchedulingSubpart ss : (Set<SchedulingSubpart>) ioc.getSchedulingSubparts()){
+		for (SchedulingSubpart ss : ioc.getSchedulingSubparts()){
 			if (ss.getParentSubpart() == null){
 				topLevel.add(ss);
 			}
@@ -102,14 +101,13 @@ public class BannerSectionLinkageHelper {
 		}
 	}
 	
-	@SuppressWarnings("unchecked")
 	private void updateLinkConnectorsForSubparts(BannerConfig bc, TreeSet<SchedulingSubpart> subparts) {
 		String currentParentId = null;
 		String nextParentId = null;
 		String returnId = null;
 		boolean hasSiblings = subparts.size() > 1;
-		for (SchedulingSubpart ss : (Set<SchedulingSubpart>) subparts){
-			for (Class_ c : (Set<Class_>) ss.getClasses()){
+		for (SchedulingSubpart ss : subparts){
+			for (Class_ c : ss.getClasses()){
 				BannerSection bs = BannerSection.findBannerSectionForBannerCourseAndClass(bc.getBannerCourse(), c);
 				returnId = updateLinkConnectorForChildrenOf(bs, getTrueChildSubparts(ss));
 				if (hasSiblings){
@@ -136,13 +134,12 @@ public class BannerSectionLinkageHelper {
 	}
 	
 	
-	@SuppressWarnings("unchecked")
 	private HashMap<Integer, HashSet<BannerSection>> groupChildSectionsByItype(BannerSection bs){
 		HashMap<Integer, HashSet<BannerSection>> sections = new HashMap<Integer, HashSet<BannerSection>>();
 		Integer itypeId = null;
 		HashSet<BannerSection> aSet = null;
 		if (bs != null && bs.getBannerSectionToChildSections() != null){
-			for(BannerSection childSection : (Set<BannerSection>) bs.getBannerSectionToChildSections()){
+			for(BannerSection childSection : bs.getBannerSectionToChildSections()){
 				if (!childSection.getClasses(hibSession).isEmpty()){
 					Class_ c = (Class_)childSection.getClasses(hibSession).iterator().next();
 					itypeId = c.getSchedulingSubpart().getItype().getItype();
@@ -233,18 +230,17 @@ public class BannerSectionLinkageHelper {
 	}
 	
 	
-	@SuppressWarnings("unchecked")
 	private void updateLinksForSubparts(BannerConfig bc, TreeSet<SchedulingSubpart> subparts, HashMap<BannerConfig, HashSet<String>> usedLinkIds, HashMap<BannerSection, HashMap<SchedulingSubpart, String>> idToUseForParentAndSupart){
 		CourseOffering co = bc.getBannerCourse().getCourseOffering(hibSession);
 		for(Iterator<SchedulingSubpart> it = subparts.iterator(); it.hasNext();){
 			SchedulingSubpart ss = it.next();
-			schedulingSubpartHasSiblings.put(ss, new Boolean((subparts.size() > 1)));
+			schedulingSubpartHasSiblings.put(ss, Boolean.valueOf((subparts.size() > 1)));
 			schedulingSubpartIsLastSibling.put(ss, !it.hasNext() && subparts.size() > 1);
 			boolean hasChildren = !getTrueChildSubparts(ss).isEmpty();
 			boolean hasParent = getTrueParentSubpart(ss) != null;
 			BannerSection parentSection = null;
 			String currentLinkId = null;
-			for (Class_ c : (Set<Class_>) ss.getClasses()){
+			for (Class_ c : ss.getClasses()){
 				BannerSection bs = BannerSection.findBannerSectionForClassAndCourseOffering(c, co, hibSession);
 				if (bs == null){
 					continue;
@@ -386,7 +382,12 @@ public class BannerSectionLinkageHelper {
 	}
 
 	private void saveChangesToBannerSectionIfNecessary(BannerSection bs){
-		Transaction trans = hibSession.beginTransaction();
+		Transaction trans = hibSession.getTransaction();
+		if (trans == null) {
+			trans = hibSession.beginTransaction();
+		} else if (!trans.isActive()) {
+			trans.begin();
+		}
 		hibSession.update(bs);
 		trans.commit();
 		hibSession.flush();
@@ -401,7 +402,7 @@ public class BannerSectionLinkageHelper {
 		}
 		TreeSet<SchedulingSubpart> childSubparts = new TreeSet<SchedulingSubpart>(new SchedulingSubpartComparator());
 		if (!ss.getChildSubparts().isEmpty()){
-			for (SchedulingSubpart childSubpart : (Set<SchedulingSubpart>)ss.getChildSubparts()){
+			for (SchedulingSubpart childSubpart : ss.getChildSubparts()){
 				if (childSubpart.getItype().getItype().equals(ss.getItype().getItype())){
 					childSubparts.addAll(getTrueChildSubparts(childSubpart));
 				} else {
@@ -439,10 +440,9 @@ public class BannerSectionLinkageHelper {
 		return(null);
 	}
 
-	@SuppressWarnings("unchecked")
 	private void removeAnyLinksForSingleItypeConfig(InstrOfferingConfig ioc) {
 		SchedulingSubpart ss = (SchedulingSubpart)ioc.getSchedulingSubparts().iterator().next();
-		for (Class_ c : (Set<Class_>) ss.getClasses()){
+		for (Class_ c : ss.getClasses()){
 			List<BannerSection> sections = BannerSection.findBannerSectionsForClass(c, hibSession);
 			for(BannerSection bs : sections){
 				if (bs.getLinkConnector() != null || bs.getLinkIdentifier() != null){
